--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,18 @@
   "bracketSpacing": true,
   "arrowParens": "always",
   "printWidth": 100,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-tailwindcss", "@trivago/prettier-plugin-sort-imports"],
+  "importOrder": [
+    "^node:?",
+    "^@adonisjs/(.*)$",
+    "^@\\w",
+    "vue",
+    "^[a-z]",
+    "^#(.*)$",
+    "^~(.*)$",
+    "^[./]"
+  ],
+  "importOrderParserPlugins": ["typescript", "decorators-legacy"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
