replaced primevue with shadcn

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "#database/*": "./database/*.js",
     "#tests/*": "./tests/*.js",
     "#start/*": "./start/*.js",
-    "#config/*": "./config/*.js"
+    "#config/*": "./config/*.js",
+    "#lib/*": "./lib/*.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.7.0",
@@ -39,9 +40,9 @@
     "@japa/assert": "^3.0.0",
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
-    "@primevue/auto-import-resolver": "^4.0.4",
     "@rushstack/eslint-patch": "^1.10.4",
     "@swc/core": "^1.6.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.1.2",
@@ -53,13 +54,11 @@
     "eslint-plugin-vue": "^9.27.0",
     "hot-hook": "^0.2.6",
     "pino-pretty": "^11.2.1",
-    "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
-    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.29"
   },
@@ -74,15 +73,19 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^3.0.0",
     "@inertiajs/vue3": "^1.2.0",
-    "@primevue/themes": "^4.0.4",
+    "@radix-icons/vue": "^1.0.0",
     "@vinejs/vine": "^2.1.0",
     "@vue/server-renderer": "^3.4.38",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "edge.js": "^6.0.2",
+    "lucide-vue-next": "^0.429.0",
     "luxon": "^3.5.0",
     "pg": "^8.12.0",
-    "primevue": "^4.0.4",
+    "radix-vue": "^1.9.4",
     "reflect-metadata": "^0.2.2",
-    "tailwindcss-primeui": "^0.3.4",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.38"
   },
   "hotHook": {
