--- a/.prettierrc
+++ b/.prettierrc
@@ -7,12 +7,12 @@
   "bracketSpacing": true,
   "arrowParens": "always",
   "printWidth": 100,
-  "plugins": ["prettier-plugin-tailwindcss", "@trivago/prettier-plugin-sort-imports"],
+  "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
   "importOrder": [
     "^node:?",
     "^@adonisjs/(.*)$",
     "^@\\w",
-    "vue",
+    "^vue?",
     "^[a-z]",
     "^#(.*)$",
     "^~(.*)$",
