--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@radix-icons/vue": "^1.0.0",
     "@vinejs/vine": "^2.1.0",
     "@vue/server-renderer": "^3.4.38",
+    "@vueuse/core": "^11.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "edge.js": "^6.0.2",
