register request extension

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "#tests/*": "./tests/*.js",
     "#start/*": "./start/*.js",
     "#config/*": "./config/*.js",
+    "#extensions/*": "./extensions/*.js",
     "#lib/*": "./lib/*.js"
   },
   "devDependencies": {
