--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "#tests/*": "./tests/*.js",
     "#start/*": "./start/*.js",
     "#config/*": "./config/*.js",
-    "#extensions/*": "./extensions/*.js",
-    "#lib/*": "./lib/*.js"
+    "#lib/*": "./lib/*.js",
+    "#enums/*": "./app/enums/*.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.7.0",
