--- a/.prettierrc
+++ b/.prettierrc
@@ -8,16 +8,7 @@
   "arrowParens": "always",
   "printWidth": 100,
   "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
-  "importOrder": [
-    "^node:?",
-    "^@adonisjs/(.*)$",
-    "^@\\w",
-    "^vue?",
-    "^[a-z]",
-    "^#(.*)$",
-    "^~(.*)$",
-    "^[./]"
-  ],
+  "importOrder": ["^node:?", "^@\\w", "^vue?", "^[a-z]", "^#(.*)$", "^~(.*)$", "^[./]"],
   "importOrderParserPlugins": ["typescript", "decorators-legacy"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
