--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/inertia": "^1.1.0",
     "@adonisjs/lucid": "^21.1.0",
+    "@adonisjs/redis": "^9.1.0",
     "@adonisjs/session": "^7.4.1",
     "@adonisjs/shield": "^8.1.1",
     "@adonisjs/static": "^1.1.1",
